# FinWell

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py
core/: orchestrator.py
output/: financial_analysis_AAPL_20250601_190021.json  financial_analysis_AAPL_20250601_190116.json  financial_analysis_AAPL_MSFT_GOOGL_NVDA_20250601_193255.json  financial_analysis_MSFT,GOOGL_20250601_190315.json  financial_analysis_MSFT_GOOGL_20250601_190405.json  financial_analysis_NVDA_20250601_190220.json
